# CainPlayer

./: .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle
medialibrary/: build.gradle
playerlibrary/src/main/cpp/MediaPlayer/: CMakeLists.txt  JniMediaPlayerCallback.cpp  JniMediaPlayerCallback.h  MediaPlayerController.cpp
playerlibrary/src/main/cpp/MediaPlayer/android/: CainMediaPlayer.cpp  CainMediaPlayer.h  com_cgfay_media_CainMediaPlayer.cpp
playerlibrary/src/main/cpp/MediaPlayer/source/: MediaPlayer.cpp  MediaPlayer.h  MediaPlayerCallback.cpp  MediaPlayerCallback.h  PlayerOption.h  PlayerState.cpp  PlayerState.h
playerlibrary/src/main/cpp/MediaPlayer/source/convertor/: AudioResampler.cpp  AudioResampler.h
playerlibrary/src/main/cpp/MediaPlayer/source/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
playerlibrary/src/main/cpp/MediaPlayer/source/device/: AudioDevice.h  VideoDevice.cpp  VideoDevice.h
playerlibrary/src/main/cpp/MediaPlayer/source/device/android/: GLESDevice.cpp  GLESDevice.h  SLESDevice.cpp  SLESDevice.h
playerlibrary/src/main/cpp/MediaPlayer/source/player/: MediaPlayer.cpp  PlayerState.cpp
playerlibrary/src/main/cpp/MediaPlayer/source/queue/: PacketQueue.cpp  PacketQueue.h
playerlibrary/src/main/cpp/MediaPlayer/source/renderer/: BGRARenderer.cpp  BGRARenderer.h  GLFilter.cpp  GLFilter.h  GLInputFilter.h  GLInputYUV420PFilter.cpp  InputRenderNode.cpp  InputRenderNode.h  RenderNode.h  Renderer.h  YUV420PRenderer.cpp  YUV420PRenderer.h
playerlibrary/src/main/cpp/MediaPlayer/source/sync/: MediaClock.cpp  MediaSync.cpp  MediaSync.h
(+39 files in other folders)
